overflow fix

--- a/wp-content/themes/Tema Bragantec/src/styles/_styleGeral.scss
+++ b/wp-content/themes/Tema Bragantec/src/styles/_styleGeral.scss
@@ -19,7 +19,7 @@ body {
     position: relative;
     font-family: Myriad;
     font-size: $fontTexto;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 h1{
