--- a/wp-content/themes/Tema Bragantec/src/styles/style.css
+++ b/wp-content/themes/Tema Bragantec/src/styles/style.css
@@ -29,7 +29,7 @@ body {
   position: relative;
   font-family: Myriad;
   font-size: 16px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1, h2 {
